# libretroshare

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.asciidoc  build.gradle
.github/workflows/: ci-macOS.yml  ci-mingw64.yml  mirror-to-gitlab.yml  ubuntu-qt6_c-cpp.yml
.reuse/: dep5
misc/Android/: Dockerfile  Dockerfile-AAR  GitlabCI_images_prepare.sh  README.asciidoc  generate_gdb_init_commands.sh  prepare-toolchain-clang.sh  proguard-keep-libretroshare-java-classes.pro  pull_sysroot.sh  start_gdbserver.sh
src/: CMakeLists.txt  libretroshare.pro  use_libretroshare.pri
src/chat/: distantchat.cc  distantchat.h  distributedchat.cc  distributedchat.h  p3chatservice.cc  p3chatservice.h  rschatitems.cc  rschatitems.h
src/crypto/: chacha20.cpp  hashstream.cc  hashstream.h
src/deep_search/: channelsindex.cpp  channelsindex.hpp  commonutils.cpp  commonutils.hpp  filesflacindexer.hpp  filesindex.cpp  filesindex.hpp  filesoggindexer.hpp  filestaglibindexer.hpp  forumsindex.cpp  forumsindex.hpp  forumsindex_fts5.cpp  forumsindex_fts5.hpp
src/dht/: p3bitdht_peers.cc
src/file_sharing/: dir_hierarchy.cc  dir_hierarchy.h  directory_storage.cc  directory_storage.h  directory_updater.cc  directory_updater.h  file_tree.cc  hash_cache.cc  p3filelists.cc  p3filelists.h  rsfilelistitems.cc  rsfilelistitems.h
src/friend_server/: fsclient.cc  fsclient.h  fsitem.h  fsmanager.cc  fsmanager.h
src/ft/: ftchunkmap.cc  ftchunkmap.h  ftcontroller.cc  ftcontroller.h  ftdatamultiplex.cc  ftextralist.cc  ftextralist.h  ftfilecreator.cc  ftfilecreator.h  ftfileprovider.cc  ftserver.cc  ftserver.h  fttransfermodule.cc  ftturtlefiletransferitem.h
src/gossipdiscovery/: gossipdiscoveryitems.cc  gossipdiscoveryitems.h  p3gossipdiscovery.cc  p3gossipdiscovery.h
src/grouter/: grouteritems.h
src/gxs/: gxssecurity.cc  rsdataservice.cc  rsdataservice.h  rsgds.h  rsgenexchange.cc  rsgenexchange.h  rsgxs.h  rsgxsdata.cc  rsgxsdata.h  rsgxsdataaccess.cc  rsgxsdataaccess.h  rsgxsnetservice.cc  rsgxsnetservice.h  rsgxsnettunnel.cc  rsgxsnettunnel.h  rsgxsnotify.h  rsgxsrequesttypes.cc  rsgxsrequesttypes.h  rsgxsutil.cc  rsgxsutil.h  rsnxs.h  rsnxsobserver.cpp  rsnxsobserver.h
src/gxstrans/: p3gxstrans.cc  p3gxstrans.h  p3gxstransitems.cc  p3gxstransitems.h
src/jsonapi/: README.adoc  async-method-wrapper-template.cpp.tmpl  jsonapi-generator.py  jsonapi.cpp  jsonapi.h  jsonapiitems.h  method-wrapper-template.cpp.tmpl  p3webui.cc  p3webui.h
src/pgp/: openpgpsdkhandler.cc  openpgpsdkhandler.h  pgphandler.cc  pgphandler.h  pgpkeyutil.cc  pgpkeyutil.h  rnppgphandler.cc  rnppgphandler.h  rscertificate.cc  rscertificate.h
src/plugins/: pluginmanager.cc
src/pqi/: authgpg.cc  authgpg.h  authssl.cc  authssl.h  p3cfgmgr.cc  p3cfgmgr.h  p3historymgr.cc  p3linkmgr.cc  p3netmgr.cc  p3netmgr.h  p3notify.cc  p3notify.h  p3peermgr.cc  p3peermgr.h  p3servicecontrol.cc  pqi_base.h  pqifdbin.cc  pqifdbin.h  pqihandler.cc  pqiindic.h  pqinetstatebox.cc  pqinetstatebox.h  pqinetwork.cc  pqinetwork.h  pqiperson.cc  pqipersongrp.cc  pqipersongrp.h  pqiproxy.h  pqissl.cc  pqissl.h  pqissllistener.cc  pqissllistener.h  pqissludp.cc  pqissludp.h  pqistore.cc  pqistreamer.cc  pqistreamer.h  pqithreadstreamer.cc  sslfns.cc  sslfns.h
src/retroshare/: rsbroadcastdiscovery.h  rschats.h  rsconfig.h  rsdisc.h  rsevents.h  rsexpr.h  rsfiles.h  rsflags.h  rsfriendrequest.h  rsfriendserver.h  rsgossipdiscovery.h  rsgrouter.h  rsgxscalendar.h  rsgxschannels.h  rsgxscircles.h  rsgxscommon.h  rsgxsflags.h  rsgxsforums.h  rsgxsiface.h  rsgxsifacehelper.h  rsgxsifacetypes.h  rsgxsservice.h  rsgxstrans.h  rshistory.h  rsidentity.h  rsids.h  rsiface.h  rsinit.h  rsjsonapi.h  rsmail.h  rsmsgs.h  rsnotify.h  rspeers.h  rsplugin.h  rsposted.h  rsreputations.h  rsservicecontrol.h  rsstatus.h  rstokenservice.h  rstor.h  (+6 more)
src/rs_android/: androidcoutcerrcatcher.hpp  errorconditionwrap.cpp  retroshareserviceandroid.cpp  retroshareserviceandroid.hpp  rsjni.cpp  rsjni.hpp
src/rs_upnp/: UPnPBase.cpp  UPnPBase.h  upnp18_retrocompat.h  upnphandler_libupnp.cc  upnphandler_libupnp.h  upnphandler_miniupnp.cc  upnphandler_miniupnp.h
src/rsitems/: itempriorities.h  rsfiletransferitems.h  rsgxscalendaritems.cc  rsgxscalendaritems.h  rsgxsforumitems.cc  rsgxsforumitems.h  rsgxsiditems.h  rsgxsitems.cc  rsgxsupdateitems.h  rsitem.h  rsmsgitems.cc  rsmsgitems.h  rsnxsitems.h  rsposteditems.cc  rsposteditems.h  rsserviceids.h  rstrafficstatsitems.h  rswikiitems.cc  rswireitems.cc  rswireitems.h
src/rsserver/: p3face-config.cc  p3face-info.cc  p3face-server.cc  p3face.h  p3friendrequest.cc  p3friendrequest.h  p3msgs.cc  p3msgs.h  p3peers.cc  p3peers.h  p3serverconfig.cc  p3serverconfig.h  p3status.cc  p3status.h  rsaccounts.cc  rsaccounts.h  rsinit.cc  rsloginhandler.cc  rsloginhandler.h
src/serialiser/: rsserial.cc  rsserializable.cc  rsserializable.h  rsserializer.cc  rsserializer.h  rstlvbase.cc  rstlvbinary.cc  rstlvfileitem.cc  rstlvidset.cc  rstlvimage.cc  rstlvitem.cc  rstlvkeys.cc  rstlvkeys.h  rstlvkeyvalue.cc  rstlvstring.cc  rstypeserializer.cc  rstypeserializer.h
src/services/: broadcastdiscoveryservice.cc  broadcastdiscoveryservice.h  p3bwctrl.cc  p3gxscalendar.cc  p3gxscalendar.h  p3gxschannels.cc  p3gxschannels.h  p3gxscircles.cc  p3gxscircles.h  p3gxscommon.cc  p3gxscommon.h  p3gxsforums.cc  p3gxsforums.h  p3gxsreputation.cc  p3gxsreputation.h  p3idservice.cc  p3idservice.h  p3msgservice.cc  p3msgservice.h  p3photoservice.cc  p3photoservice.h  p3postbase.cc  p3posted.cc  p3posted.h  p3rtt.cc  p3statusservice.cc  p3statusservice.h  p3wiki.cc  p3wiki.h  p3wire.cc  p3wire.h  rseventsservice.cc  rseventsservice.h
src/tcponudp/: bss_tou.cc  rsudpstack.h
src/tor/: CryptoKey.cpp  HiddenService.cpp  TorControl.cpp  TorControlSocket.cpp  TorControlSocket.h  TorManager.cpp  TorManager.h  TorProcess.cpp  TorProcess.h  bytearray.h
src/turtle/: p3turtle.cc  p3turtle.h  rsturtleitem.h
src/util/: argstream.h  contentvalue.h  cxx11retrocompat.h  cxx14retrocompat.h  (+61 more)
tests/: test_JSON_API_DirDetails_handle_correct_64bit_integer_type.sh
(+40 files in other folders)
